--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -4,6 +4,7 @@
 {{ end }}
 {{ define "content" }}
 <form action="/threads/{{.Thread.ID}}" method="POST">
+    {{.CSRF}}
     <div class="form-group">
         <label>Title</label>
         <input type="text" name="title" class="form-control" placeholder="Give your post a great title">
